﻿EQExtractor2 Changelog. All changes since the 1.0 release.

==12/25/2010==
Derision: Heading appears to be multiplied by 2 in ZonePoint packets.

==12/21/2010==
Derision: OP_SendFindableNPCS

==12/08/2010==
Derision: Added support for client Dec  7 2010 14:04:53

==11/22/2010==
Derision: Netcode fix highlighted by live patch supplied by robregen.
Derision: Handled spawns with otherdata & 2 set the same as otherdata & 1 (destructable object data present), based on live patch supplied
		  by robregen.

==10/23/2010==
Derision: Support for 20th October Live patch.

==09/23/2010==
Derision: Support for 22nd September Test Server client. Don't think I have OP_ShopEnd correct.

==09/17/2010==
Derision: Passed packet direction to Explorers.

==09/11/2010==
Derision: Identified a few more 'Area' IDs for the new Item slot numbering system.
Derision: Explorer methods are now called with the packet payload as a ByteStream rather than byte[]

==09/10/2010==
Derision: Addded ability to call 'Explorer' methods during Packet Dump for use while figuring out packet formats.

==09/08/2010==
Derision: Moved item packet decode into a separate method.

==09/03/2010==
Derision: Added support for version currently on test server (seems like a lot of opcodes have changed values).
Derision: Fixed item Quantity field for Sep 1 patch. Fixed typo in patch .conf file
Derision: Debug text box now resizes with it's parent form.

==08/29/2010==
Derision: Added handling of unencapsulated application packets with flags which were previously being interpreted as unknown opcodes.
		  (Seems to only have affects position update packets).

Derision: Construct grids from both OP_NPCMoveUpdate and OP_MobUpdate packets. Previously, if OP_NPCMoveUpdate packets were sent for a mob,
		  i.e. high-resolution updates, any OP_MobUpdate packets for that mob where ignored.

Derision: Added facility in Options to specify a file to write low level netcode debug information to.