@@ -161,11 +161,11 @@ OP_GMLastName=0x0000				# C
 
 OP_InspectAnswer=0x0000				# C
 OP_BeginCast=0x0000					# C
-OP_BuffFadeMsg=0x0000				# C
+OP_BuffFadeMsg=0x50c2				# C
 OP_ConsentResponse=0x0000			# C
 OP_MemorizeSpell=0x0000				# C
 OP_SwapSpell=0x0000					# C
-OP_CastSpell=0x0000					# C
+OP_CastSpell=0x7286					# C
 OP_Consider=0x0000					# C
 OP_FormattedMessage=0x0000			# C
 OP_SimpleMessage=0x0000				# C 0x0000
@@ -193,13 +193,13 @@ OP_Surname=0x0000					# C
 OP_ClearSurname=0x0000				# C
 OP_FaceChange=0x0000				# C
 OP_SenseHeading=0x0000				# C
-OP_Action=0x0000					# C
+OP_Action=0x1513					# C
 OP_ConsiderCorpse=0x0000			# C
 OP_HideCorpse=0x0000				# C 0x0000
 OP_Bug=0x0000						# C
 OP_Feedback=0x0000					# C
 OP_Report=0x0000					# C
-OP_Damage=0x0000					# C or OP_Action2?
+OP_Damage=0x7519					# C or OP_Action2?
 OP_ChannelMessage=0x2e79			# was 0x2e79
 OP_Assist=0x0000					# C
 OP_AssistGroup=0x0000				# C
@@ -225,7 +225,7 @@ OP_MobHealth=0x0000					# C
 OP_InitialMobHealth=0x0000			# C
 OP_TargetHoTT=0x0000				# C
 OP_TargetBuffs=0x0000				# C
-OP_BuffCreate=0x0000                # V
+OP_BuffCreate=0x6bfb                # V
 OP_DeleteSpawn=0x7434				# was 0x7434
 OP_AutoAttack=0x0000				# C
 OP_AutoAttack2=0x0000				# C
@@ -298,6 +298,7 @@ OP_PopupResponse=0x0000				# C
 OP_OnLevelMessage=0x0000			# C
 OP_AugmentInfo=0x0000				# C
 OP_Petition=0x0000					# C
+OP_SomeItemPacketMaybe=0x4200		# C
 OP_SomeItemPacketMaybe=0x0000		# C
 OP_PVPStats=0x0000					# C
 OP_PVPLeaderBoardRequest=0x0000		# C
@@ -607,3 +608,4 @@ OP_RAWOutOfSession=0x0000			#
 # we need to document the differences between these packets to make identifying them easier
 OP_Some3ByteHPUpdate=0x0000			# initial HP update for mobs
 OP_InitialHPUpdate=0x0000			#
+OP_OPCode2511=0x2511
